# de_customer_challenge

./: .gitignore  Notes.md  README.md
coding-challenge/: pyproject.toml
coding-challenge/conf/1001_customer/: catalog.yml  globals.yml
coding-challenge/conf/base/: catalog.yml  ingestion.yml  logging.yml  parameters.yml
coding-challenge/notebooks/: Example_plot.ipynb
coding-challenge/src/: requirements.txt  setup.py
coding-challenge/src/coding_challenge/: __init__.py  __main__.py  pipeline_registry.py  settings.py
coding-challenge/src/coding_challenge/pipelines/01_bronze/: nodes.py  pipeline.py
coding-challenge/src/coding_challenge/pipelines/03_gold/: nodes.py
coding-challenge/src/coding_challenge/pipelines/bronze/: nodes.py  pipeline.py
coding-challenge/src/coding_challenge/pipelines/gold/: nodes.py  pipeline.py
coding-challenge/src/coding_challenge/pipelines/silver/: nodes.py  pipeline.py
coding-challenge/src/coding_challenge/pipelines/utils/: logging_utils.py
coding-challenge/src/tests/: test_run.py
coding-challenge/src/tests/pipelines/: conftest.py  test_bronze_merge.py  test_bronze_normalizers.py  test_gold_fact_views.py  test_silver_mapping_and_stockout.py
